<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Toilettenfinder Hamburg</string>

    <!-- Menu names -->
    <string name="menu_map">Karte</string>
    <string name="menu_impressum">Impressum</string>
    <string name="menu_toi_list">Liste</string> 
    <string name="menu_search">Suchen</string> 
    <string name="menu_poi_detail">Detail</string>  
    
    <string name="latitude">Latitude</string>
    <string name="longitude">Logitude</string>
    
    <!-- Impressum -->
    <string name="impressum_name">Förderverein Barrierefreies Hamburg e.V. (gemeinnützig)</string>
    <string name="impressum_adresse">Kolberger Weg 3 • 21465 Reinbek</string>
    <string name="impressum_vorsitz">Vorsitzender: Louis F. Maywald</string>
    <string name="impressum_gericht">Vereinsregister Kreis Stormarn, Aktenzeichen: VR 3427 HL</string>
    
    <!-- bf-hh -->
    <string name="long_link">www.barrierefreieshamburg.de</string>
    
    <!-- Image descriptions -->
    <string name="image_logo">Logo</string>
    
    <string name="toilet_find_way">Route finden:</string>
    <string name="toilet_button_map_route">Karte</string>
    <string name="toilet_button_text_route">Beschreibung</string>
    <string name="toilet_comment">Mir ist aufgefallen:</string>
    <string name="toilet_label_mail">E-Mail:</string>
    <string name="toilet_mail_field_description">*freiwillige Angabe</string>
    <string name="toilet_button_send">Absenden</string>
	
    <!--  Button texts -->
    <string name="button_load_more">Weitere laden:</string>
</resources>