<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.bfhh.stilleoertchenhamburg.MainActivity" >
    
    <!-- Icons -->
    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_action_map"
        android:menuCategory="container"
        android:orderInCategory="1"
        android:title="@string/menu_map"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/menu_toi_list"
        android:icon="@drawable/ic_list"
        android:menuCategory="container"
        android:orderInCategory="2"
        android:title="@string/menu_toi_list"
        app:showAsAction="ifRoom"/>
    
    <!-- Overflow -->
    <item
        android:id="@+id/menu_impressum"
        android:title="@string/menu_impressum"
        app:showAsAction="never"/>

</menu>
